# Process_mining_generator

./: .gitignore  README.md  __init__.py  business_calendar.py  case_generator.py  config.py  constants.py  csv_writer.py  logger.py  main.py  pyproject.toml  resource_pool.py  utils.py
multi_process_generator/: __init__.py  case_linker.py  config.py  cross_process_generator.py  utils.py
tests/: conftest.py  test_business_calendar.py  test_case_generator.py  test_config.py  test_csv_writer.py  test_integration.py  test_resource_pool.py  test_utils.py
